# safe-rbac-rag

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  rbac_manager.py  roles.py  tutorial.ipynb
src/: rbac_manager.py  secure_rag.py  tutorial.ipynb  utils.py
src/rbac_rag/: _types.py  rbac_manager.py  secure_rag.py
