[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbac_rag"
version = "1.0.0"
description = "Simple, Safe, and Secure RAG from Haize Labs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pymongo",
    "requests",
    "python-dotenv",
    "pydantic",
    "numpy",
]

[project.scripts]
rbac_rag = "secure_rag:main"
